<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnWebViewApp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_web_view_app"/>

    <Button
        android:id="@+id/btnGreetApp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/btn_greet_app"/>

    <Button
        android:id="@+id/btnBMIApp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_bmi_app"/>

    <Button
        android:id="@+id/btnTODOApp"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_todo_app"/>

</LinearLayout>